@@ -2,6 +2,8 @@
 
 	* src/stm8/peeph.def:
 	  Pick some improvements from patch #362 by Visenri.
+	* support/regression/tests/bug-3172.c:
+	  Test for bug #3172.
 
 2020-01-26 Philipp Klaus Krause <pkk AT spth.de>
 
